blog post added

--- a/agencyzilla-html/blog.html
+++ b/agencyzilla-html/blog.html
@@ -201,7 +201,7 @@
                         <article class="blog-post d-flex align-items-center blog-post-latest">
                             <div class="media float-left">
                                 <a href="blog-details.html">
-                                    <img src="assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
+                                    <img src="assets/img/blog/blog-4.jpg" class="img-fluid" alt="">
                                 </a> 
 
                                 <ul class="categories list-inline">
@@ -210,8 +210,8 @@
                             </div>
 
                             <div class="text">
-                                <a href="#" class="date">April 1, 2021</a>
-                                <a href="#"><h5 class="title">What We Know About Women in Digital Marketing and What We've Learned</h5></a>
+                                <a href="#" class="date">July 1, 2022</a>
+                                <a href="#"><h5 class="title">Search ads on Facebook</h5></a>
                             </div>
                         </article><!-- /blog-article -->
                     </div>
@@ -220,7 +220,7 @@
                         <article class="blog-post d-flex align-items-center blog-post-latest">
                             <div class="media float-left">
                                 <a href="blog-details.html">
-                                    <img src="assets/img/blog/blog-3.jpg" class="img-fluid" alt="">
+                                    <img src="assets/img/blog/blog-5.jpg" class="img-fluid" alt="">
                                 </a>
 
                                 <ul class="categories list-inline">
@@ -229,8 +229,8 @@
                             </div>
 
                             <div class="text">
-                                <a href="#" class="date">January 19, 2021</a>
-                                <a href="#"><h5 class="title">Our six-month review of digital marketing</h5></a>
+                                <a href="#" class="date">May 10, 2021</a>
+                                <a href="#"><h5 class="title">Making Effective and Efficient Search Query Reports</h5></a>
                             </div>
                         </article><!-- /blog-article -->
                     </div>
@@ -284,7 +284,7 @@
                             <article class="blog-post d-flex align-items-center">
                                 <div class="media float-left">
                                     <a href="blog-details.html">
-                                        <img src="assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
+                                        <img src="assets/img/blog/blog-4.jpg" class="img-fluid" alt="">
                                     </a>
 
                                     <ul class="categories list-inline">
@@ -293,15 +293,15 @@
                                 </div>
 
                                 <div class="text">
-                                    <a href="#" class="date">April 1, 2021</a>
-                                    <a href="blog-details.html"><h4 class="title">2022 has been another unusual year, but that hasn’t stopped brands, agencies and digital marketers from getting creative.</h4></a>
+                                    <a href="#" class="date">July 1, 2022</a>
+                                    <a href="blog-details.html"><h4 class="title">Search ads on Facebook</h4></a>
                                 </div>
                             </article><!-- /blog-article -->
 
                             <article class="blog-post d-flex align-items-center">
                                 <div class="media float-left">
                                     <a href="blog-details.html">
-                                        <img src="assets/img/blog/blog-3.jpg" class="img-fluid" alt="">
+                                        <img src="assets/img/blog/blog-5.jpg" class="img-fluid" alt="">
                                     </a>
 
                                     <ul class="categories list-inline">
@@ -310,42 +310,21 @@
                                 </div>
 
                                 <div class="text">
-                                    <a href="#" class="date">January 19, 2021</a>
-                                    <a href="blog-details.html"><h4 class="title">Our six-month review of digital marketing</h4></a>
+                                    <a href="#" class="date">May 10, 2021</a>
+                                    <a href="blog-details.html"><h4 class="title">Making Effective and Efficient Search Query Reports</h4></a>
                                 </div>
                             </article><!-- /blog-article -->
 
                             <article class="blog-post d-flex align-items-center">
                                 <div class="media float-left">
                                     <a href="blog-details.html">
-                                        <img src="assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
-                                    </a>
-
-                                    <ul class="categories list-inline">
-                                        <li><a href="#">Seo</a></li>
-                                    </ul>
+                                        <img src="assets/img/blog/blog-6.jpg" class="img-fluid" alt="">
+                                    </a> 
                                 </div>
 
                                 <div class="text">
-                                    <a href="#" class="date">April 1, 2021</a>
-                                    <a href="blog-details.html"><h4 class="title">2022 has been another unusual year, but that hasn’t stopped brands, agencies and digital marketers from getting creative.</h4></a>
-                                </div>
-                            </article><!-- /blog-article -->
-
-                            <article class="blog-post d-flex align-items-center">
-                                <div class="media float-left">
-                                    <a href="blog-details.html">
-                                        <img src="assets/img/blog/blog-3.jpg" class="img-fluid" alt="">
-                                    </a>
-
-                                    <ul class="categories list-inline">
-                                        <li><a href="#">Marketing</a></li>
-                                    </ul>
-                                </div>
-
-                                <div class="text">
-                                    <a href="#" class="date">January 19, 2021</a>
-                                    <a href="blog-details.html"><h4 class="title">Our six-month review of digital marketing</h4></a>
+                                    <a href="#" class="date">June 1, 2022</a>
+                                    <a href="#"><h5 class="title">Five Modifications You Can Make to Your Digital Marketing for COVID-19</h5></a>
                                 </div>
                             </article><!-- /blog-article -->
 
@@ -398,16 +377,16 @@
                                         <article class="blog-post d-flex flex-column blog-post-sm">
                                             <div class="media float-left">
                                                 <a href="blog-details.html">
-                                                    <img src="assets/img/blog/blog-3.jpg" class="img-fluid" alt="">
+                                                    <img src="assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
                                                 </a> 
                                             </div>
 
                                             <div class="text">
-                                                <a href="#" class="date">January 19, 2021</a>
-                                                <a href="#"><h5 class="title">Our six-month review of digital marketing</h5></a>
+                                                <a href="#" class="date">April 1, 2021</a>
+                                                <a href="#"><h5 class="title">2022 has been another unusual year, but that hasn’t stopped brands, agencies and digital marketers from getting creative.</h5></a>
                                             </div>
                                         </article><!-- /blog-article -->
-                                    </div> 
+                                    </div>
                                 </div>
                             </div>
                         </aside>
