--- a/agencyzilla-html/index.html
+++ b/agencyzilla-html/index.html
@@ -113,6 +113,14 @@
     <!-- banner -->
     <div class="banner" style="background-color: #f1f1f1;">
         <div class="container">
+            <div class="background">
+                <div class="cube"></div>
+                <div class="cube"></div>
+                <div class="cube"></div>
+                <div class="cube"></div>
+                <div class="cube"></div>
+            </div>
+            
             <div class="row align-items-center">
                 <div class="col-lg-7">
                     <div class="banner__content entry-title">  
@@ -122,7 +130,7 @@
                             <p>Data-driven digital marketing liberates you to concentrate on bigger-picture thinking and scaling your startup.</p>
                         </div>
                         
-                        <button class="scrollDown" data-space="120">
+                        <button class="scrollDown" data-space="0">
                             <i class="fas fa-arrow-down-long"></i> 
                         </button>
                     </div>
