--- a/agencyzilla-html/blog-details.html
+++ b/agencyzilla-html/blog-details.html
@@ -236,13 +236,13 @@
                                         <article class="blog-post d-flex flex-column blog-post-sm">
                                             <div class="media float-left">
                                                 <a href="blog-details.html">
-                                                    <img src="assets/img/blog/blog-3.jpg" class="img-fluid" alt="">
+                                                    <img src="assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
                                                 </a> 
                                             </div>
 
                                             <div class="text">
-                                                <a href="#" class="date">January 19, 2021</a>
-                                                <a href="#"><h5 class="title">Our six-month review of digital marketing</h5></a>
+                                                <a href="#" class="date">April 1, 2021</a>
+                                                <a href="#"><h5 class="title">2022 has been another unusual year, but that hasn’t stopped brands, agencies and digital marketers from getting creative.</h5></a>
                                             </div>
                                         </article><!-- /blog-article -->
                                     </div> 
