blog & blog details page gradiend-background added

--- a/agencyzilla-html/blog-details.html
+++ b/agencyzilla-html/blog-details.html
@@ -111,7 +111,7 @@
     </header><!-- /header -->
     <div class="header-gutter"></div><!-- /header-gutter -->
 
-    <div id="primary" class="content-area">
+    <div id="primary" class="content-area gradient-background">
 
         <section class="blog-details-page section-padding">
             <div class="container">
