--- a/agencyzilla-html/blog.html
+++ b/agencyzilla-html/blog.html
@@ -111,7 +111,7 @@
     </header><!-- /header -->
     <div class="header-gutter"></div><!-- /header-gutter -->
 
-    <div id="primary" class="content-area">
+    <div id="primary" class="content-area gradient-background">
 
         <!-- featured-blog-posts -->
         <section class="featured-blog-posts section-padding">
