dark_white color change

--- a/agencyzilla-html/index.html
+++ b/agencyzilla-html/index.html
@@ -111,7 +111,7 @@
     </header><!-- /header -->
 
     <!-- banner -->
-    <div class="banner" style="background-color: #f1f1f1;">
+    <div class="banner" style="background-color: #E7FAF7;">
         <div class="container">
             <div class="background">
                 <div class="cube"></div>
