--- a/agencyzilla-html/index.html
+++ b/agencyzilla-html/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!--  aos css plugins -->
     <link rel="stylesheet" href="assets/css/aos.min.css">
+    <link rel="stylesheet" href="assets/css/slick-slider.min.css">
     <!--  main style css file -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- template main style css file -->
@@ -119,7 +120,7 @@
                 <div class="cube"></div>
                 <div class="cube"></div>
                 <div class="cube"></div>
-            </div>
+            </div><!-- /background animation -->
             
             <div class="row align-items-center">
                 <div class="col-lg-7">
@@ -146,6 +147,98 @@
     </div><!-- /banner -->
 
     <div id="primary" class="content-area">
+
+        <!-- brands-logo -->
+        <section class="brands-logo section-padding pb-0">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="brands-logo__content text-center">
+                            <h2 class="title">We are fortunate to collaborate with reputable brands and businesses.</h2>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+ 
+            <div class="brands-logo-slider-wrapper d-flex"> 
+                <div class="slider-item">
+                    <a href="#" class="brands-logo__item">
+                        <div class="brands-logo__item-media">
+                            <img src="assets/img/home/client-bg-1.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="brands-logo__item-client-logo">
+                            <img src="assets/img/home/client-1.png" class="img-fluid" alt="">
+                        </div>
+                    </a><!-- /brands-logo__item -->
+                </div>
+
+                <div class="slider-item">
+                    <a href="#" class="brands-logo__item">
+                        <div class="brands-logo__item-media">
+                            <img src="assets/img/home/client-bg-1.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="brands-logo__item-client-logo">
+                            <img src="assets/img/home/client-1.png" class="img-fluid" alt="">
+                        </div>
+                    </a><!-- /brands-logo__item -->
+                </div>
+
+                <div class="slider-item">
+                    <a href="#" class="brands-logo__item">
+                        <div class="brands-logo__item-media">
+                            <img src="assets/img/home/client-bg-1.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="brands-logo__item-client-logo">
+                            <img src="assets/img/home/client-1.png" class="img-fluid" alt="">
+                        </div>
+                    </a><!-- /brands-logo__item -->
+                </div>
+
+                <div class="slider-item">
+                    <a href="#" class="brands-logo__item">
+                        <div class="brands-logo__item-media">
+                            <img src="assets/img/home/client-bg-1.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="brands-logo__item-client-logo">
+                            <img src="assets/img/home/client-1.png" class="img-fluid" alt="">
+                        </div>
+                    </a><!-- /brands-logo__item -->
+                </div>
+
+                <div class="slider-item">
+                    <a href="#" class="brands-logo__item">
+                        <div class="brands-logo__item-media">
+                            <img src="assets/img/home/client-bg-1.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="brands-logo__item-client-logo">
+                            <img src="assets/img/home/client-1.png" class="img-fluid" alt="">
+                        </div>
+                    </a><!-- /brands-logo__item -->
+                </div>
+
+                <div class="slider-item">
+                    <a href="#" class="brands-logo__item">
+                        <div class="brands-logo__item-media">
+                            <img src="assets/img/home/client-bg-1.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="brands-logo__item-client-logo">
+                            <img src="assets/img/home/client-1.png" class="img-fluid" alt="">
+                        </div>
+                    </a><!-- /brands-logo__item -->
+                </div>
+
+                <div class="slider-item">
+                    <a href="#" class="brands-logo__item">
+                        <div class="brands-logo__item-media">
+                            <img src="assets/img/home/client-bg-1.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="brands-logo__item-client-logo">
+                            <img src="assets/img/home/client-1.png" class="img-fluid" alt="">
+                        </div>
+                    </a><!-- /brands-logo__item -->
+                </div>
+            </div>
+        </section><!-- /brands-logo -->
 
         <!-- latest-news -->
         <section class="latest-news section-padding">
@@ -338,10 +431,12 @@
     <script src="assets/js/jquery.easing.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/slick-slider.min.js"></script>
     <script src="assets/js/sidr.min.js"></script>
     <script src="assets/js/jquery.hover.dir.js"></script>
     <script src="assets/js/jquery.counterup.js"></script>
     <script src="assets/js/jquery.waypoints.js"></script>
+    <script src="assets/js/sticky-kit.min.js"></script>
     <script src="assets/js/aos.min.js"></script>
     <script src="assets/js/active.js"></script>
 </body>
