testimoial section complete

--- a/agencyzilla-html/index.html
+++ b/agencyzilla-html/index.html
@@ -240,6 +240,98 @@
             </div>
         </section><!-- /brands-logo -->
 
+        <section class="clients section-padding pb-0">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="clients__content text-center"> 
+                            <h2 class="title">What clients have to say about us.</h2> 
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row clients-slider">
+                    <div class="col-sm-8">
+                        <div class="clients-item">
+                            <div class="icon float-left">
+                                <i class="fa fa-quote-left"></i>
+                            </div>
+
+                            <div class="quote">
+                                <p>Five-star design firm Visit my website at agency.com if anyone wants to see an example of what can be done with this theme.</p>
+
+                                <div class="quote-footer d-flex align-items-center">
+                                    <div class="media float-left">
+                                        <img src="assets/img/home/testimonail-clients-1.jpg" class="img-fluid" alt="">
+                                    </div>
+
+                                    <div class="text">
+                                        <h6 class="name">James Smith</h6>
+                                        <span class="position">CEO of Company Co.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-8">
+                        <div class="clients-item">
+                            <div class="icon float-left">
+                                <i class="fa fa-quote-left"></i>
+                            </div>
+
+                            <div class="quote">
+                                <p>Five-star design firm Visit my website at agency.com if anyone wants to see an example of what can be done with this theme.</p>
+
+                                <div class="quote-footer d-flex align-items-center">
+                                    <div class="media float-left">
+                                        <img src="assets/img/home/testimonail-clients-1.jpg" class="img-fluid" alt="">
+                                    </div>
+
+                                    <div class="text">
+                                        <h6 class="name">James Smith</h6>
+                                        <span class="position">CEO of Company Co.</span>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
+                    </div>
+                    
+                    <div class="col-sm-8">
+                        <div class="clients-item">
+                            <div class="icon float-left">
+                                <i class="fa fa-quote-left"></i>
+                            </div>
+
+                            <div class="quote">
+                                <p>Five-star design firm Visit my website at agency.com if anyone wants to see an example of what can be done with this theme.</p>
+
+                                <div class="quote-footer d-flex align-items-center">
+                                    <div class="media float-left">
+                                        <img src="assets/img/home/testimonail-clients-1.jpg" class="img-fluid" alt="">
+                                    </div>
+
+                                    <div class="text">
+                                        <h6 class="name">James Smith</h6>
+                                        <span class="position">CEO of Company Co.</span>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12">
+                        <div class="slider-controls clients_slider_control">
+                            <div class="slider-progress"><div class="progress"></div></div>
+                            <div class="slider-dots"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> <!-- /home-our-partners -->
+
         <!-- latest-news -->
         <section class="latest-news section-padding">
             <div class="container">
