remove gradient background

--- a/agencyzilla-html/index.html
+++ b/agencyzilla-html/index.html
@@ -114,13 +114,13 @@
     <!-- banner -->
     <div class="banner" style="background-color: #E7FAF7;">
         <div class="container">
-            <div class="background">
+            <!-- <div class="background">
                 <div class="cube"></div>
                 <div class="cube"></div>
                 <div class="cube"></div>
                 <div class="cube"></div>
                 <div class="cube"></div>
-            </div><!-- /background animation -->
+            </div> --><!-- /background animation -->
             
             <div class="row align-items-center">
                 <div class="col-lg-7">
