--- a/agencyzilla-html/blog-details.html
+++ b/agencyzilla-html/blog-details.html
@@ -26,7 +26,7 @@
     
 </head>
 
-<body>
+<body style="background-color: #E7FAF7;">
     <div id="page-load-animaiton"> 
         <img src="assets/img/page-load-animation.svg" class="img-fluid">
     </div><!-- /page load animation -->
@@ -111,7 +111,7 @@
     </header><!-- /header -->
     <div class="header-gutter"></div><!-- /header-gutter -->
 
-    <div id="primary" class="content-area gradient-background">
+    <div id="primary" class="content-area">
 
         <section class="blog-details-page section-padding">
             <div class="container">
