service page & service page details wokring

--- a/agencyzilla-html/index.html
+++ b/agencyzilla-html/index.html
@@ -246,7 +246,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="our-services__content entry-title text-center">
-                            <h2 class="title">Our main services</h2>
+                            <h2 class="title text-capitalize">Our main services</h2>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="people-likes__content entry-title text-center">
-                            <h2 class="title">Reasons People Like Us</h2>
+                            <h2 class="title text-capitalize">Reasons People Like Us</h2>
                             <p>Professional design firm to provide remedies</p>
                         </div>
                     </div>
@@ -349,7 +349,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="clients__content text-center"> 
-                            <h2 class="title">What clients have to say about us.</h2> 
+                            <h2 class="title text-capitalize">What clients have to say about us.</h2> 
                         </div>
                     </div>
                 </div>
