--- a/agencyzilla-html/blog.html
+++ b/agencyzilla-html/blog.html
@@ -149,7 +149,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="recommended-blog-posts__content entry-title"> 
-                            <h2 class="title">Recommended Reading</h2>
+                            <h2 class="title text-capitalize">Recommended Reading</h2>
 
                             <div class="description h4 font-weight-normal">
                                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
