--- a/agencyzilla-html/services.html
+++ b/agencyzilla-html/services.html
@@ -113,6 +113,64 @@
 
     <div id="primary" class="content-area">
 
+        <!-- our-services -->
+        <section class="our-services section-padding pb-0">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="our-services__content entry-title text-center">
+                            <h2 class="title text-capitalize">Our main services</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row mb-30">
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="services-details.html" class="our-services__item text-center">
+                            <div class="media">
+                                <img src="assets/img/services/services-1.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="text">
+                                <h4 class="title">SEO</h4>
+                                <div class="description">
+                                    <p>Data-driven SEO as a growth engine for organic development</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="services-details.html" class="our-services__item text-center">
+                            <div class="media">
+                                <img src="assets/img/services/services-2.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="text">
+                                <h4 class="title">PPC</h4>
+                                <div class="description">
+                                    <p>Utilizing data-driven PPC to generate ROI and income</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="services-details.html" class="our-services__item text-center">
+                            <div class="media">
+                                <img src="assets/img/services/services-3.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="text">
+                                <h4 class="title">Web Development</h4>
+                                <div class="description">
+                                    <p>Utilizing data-driven web development to construct better foundations</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section><!-- /our-services -->
+
         <!-- people-likes -->
         <section class="people-likes section-padding pb-0">
             <div class="container">
