services page complete

--- a/agencyzilla-html/services.html
+++ b/agencyzilla-html/services.html
@@ -109,9 +109,33 @@
             </div>
         </nav><!-- /nav -->
     </header><!-- /header -->
-    <div class="header-gutter"></div><!-- /header-gutter -->
 
     <div id="primary" class="content-area">
+
+        <!-- business banner -->
+        <div class="banner" style="background-color: #E7FAF7;">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-7">
+                        <div class="banner__content entry-title">  
+                            <h1 class="title">Popular Business Growth Solution</h1>
+
+                            <div class="description">
+                               <p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Numquam, aperiam ipsum deleniti ipsa perspiciatis odio illo pariatur ab veniam veritatis totam dolorum placeat tempore a ratione corporis nisi molestias fugiat et quo quod porro doloribus. Vitae consequatur natus harum alias.</p>
+                            </div>
+                            
+                            <a href="#" class="btn">More<span class="btn__animation"></span></a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-5">
+                        <div class="banner__media">  
+                            <img src="assets/img/services/business.png" alt="banner" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- /business banner -->
 
         <!-- our-services -->
         <section class="our-services section-padding pb-0">
