service banner update

--- a/agencyzilla-html/services.html
+++ b/agencyzilla-html/services.html
@@ -113,7 +113,7 @@
     <div id="primary" class="content-area">
 
         <!-- business banner -->
-        <div class="banner" style="background-color: #E7FAF7;">
+        <div class="banner services" style="background-color: #E7FAF7;">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-7">
